<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="149dp"
        android:text="CENSO DAM 2024"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_view_nombresyapellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="137dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_apellidosynombres"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_clave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="166dp"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="@string/input_contraseña"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="193dp"
        android:layout_height="29dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="@string/input_email"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="201dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="@string/input_phone"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textview_fechaN"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="193dp"
        android:layout_height="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="@string/input_fechadeN"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/textview_horadeN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="188dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="@string/input_horadeN"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:text="@string/textview_residencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <RadioGroup
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="113dp"
            android:layout_height="25dp"
            android:text="@string/rbutton_rural" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="116dp"
            android:layout_height="32dp"
            android:text="@string/rbutton_urbano" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>